--- a/portfolio/src/Component/Admin/admin.css
+++ b/portfolio/src/Component/Admin/admin.css
@@ -108,3 +108,11 @@
     text-align:center;
     cursor: pointer;
 }
+
+.technoloogies{
+    display:inline-block;
+    background-color:#41b0bf;
+    padding:5px 20px;
+    margin:10px 5px 0 0;
+    border-radius:10px;
+}
